--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">The Idea app</a>
+      <a class="navbar-brand" href="/">The Idea application</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="/ideas">Ideas</a></li>
-        <li><a href="/pages/info">Info</a></li>
+        <li><a href="/pages/info">Information</a></li>
       </ul>
     </div>
   </div>s
